fixing page overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,6 +21,7 @@ html {
 
 body {
     background: whitesmoke;
+    overflow-x: hidden;
 }
 
 .main-header {
